--- a/BusScheduler/app/build.gradle
+++ b/BusScheduler/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
     implementation "androidx.room:room-runtime:$room_version"
+    implementation 'androidx.room:room-common:2.3.0'
+    implementation 'androidx.leanback:leanback:1.0.0'
     kapt "androidx.room:room-compiler:$room_version"
 
     // optional - Kotlin Extensions and Coroutines support for Room
